--- a/app/src/styles/common/color.css
+++ b/app/src/styles/common/color.css
@@ -1,25 +1,9 @@
 :root{
-  --c-primary: #2CFF00;
-  --c-primary-400: #00B94D;
-  --c-primary-300: #00bc77a6;
-  --c-primary-200: #8AC97D;
-  --c-primary-100: #00bc7726;
-
-  --c-info: #265EAF;
-  --c-warning: #413d04;
-  --c-danger: #FF0000;
-  --c-success: #9AFF00;
-
-
-  --c-title: #FFFFFF;
-  --c-content:#333333;
-  --c-sub: #507548;
-  --c-disabled: #c5c8ce;
-  --c-border: #dcdee2;
-  --c-divider: #e8eaec;
-  
-  --c-dark: #333;
-  --c-light: #F4F4F4;
+  --c-primary: var(--el-color-primary);
+  --c-info: var(--el-color-info);
+  --c-warning: var(--el-color-warning);
+  --c-danger:  var(--el-color-danger);
+  --c-success: var(--el-color-success);
 }
 
 
@@ -36,14 +20,3 @@
   color: var(--c-primary);
 }
 
-
-/* 初始化css样式 */
-body{
-  color: var(--c-content);
-}
-h1{
-  color: var(--c-light);
-}
-h2, h3, h4{
-  color: var(--c-title);
-}
