--- a/app/src/styles/vue/transition.css
+++ b/app/src/styles/vue/transition.css
@@ -39,3 +39,25 @@
   transform: scaleY(1);  
   opacity: 1;
 }
+
+
+
+/* breadcrumb transition */
+.breadcrumb-enter-active,
+.breadcrumb-leave-active {
+  transition: all .5s;
+}
+
+.breadcrumb-enter,
+.breadcrumb-leave-active {
+  opacity: 0;
+  transform: translateX(20px);
+}
+
+.breadcrumb-move {
+  transition: all .5s;
+}
+
+.breadcrumb-leave-active {
+  position: absolute;
+}
