--- a/app/src/styles/esri/reset.scss
+++ b/app/src/styles/esri/reset.scss
@@ -11,3 +11,7 @@
   border-radius: var(--el-border-radius-base);
   overflow: hidden;
 }
+
+.esri-sketch{
+  border-radius: var(--el-border-radius-base);
+}
