--- a/app/src/styles/element-plus/table.css
+++ b/app/src/styles/element-plus/table.css
@@ -3,4 +3,8 @@
 }
 .el-table{
   --el-table-header-bg-color: var(--el-bg-color-page);
+  font-size: var(--f-m);
+}
+.el-table-v2{
+  font-size: var(--f-m);
 }
