--- a/app/src/styles/element-plus/form-item.css
+++ b/app/src/styles/element-plus/form-item.css
@@ -2,3 +2,16 @@
   font-weight: bold;
   font-size: var(--f-m);
 }
+
+
+.el-form-item.is-btn-group{
+  margin-bottom: 0;
+}
+.el-form-item.is-btn-group .el-form-item__content{
+ justify-content: flex-end;
+}
+
+.el-form-item.is-btn-group.is-left .el-form-item__content{
+  justify-content: flex-start;
+  margin-left: 0!important;
+ }
