--- a/docs/src/styles/element-plus/reset.css
+++ b/docs/src/styles/element-plus/reset.css
@@ -1,5 +1,6 @@
 :root {
   --el-font-size-base: var(--f-m);
+  --el-disabled-text-color: var(--el-text-color-regular);
 }
 .el-button+.el-button{
   margin-left: var(--gap-widget-space);
